Fix site overflow issue (e.g. when using o-grid)

--- a/src/scss/_demo.main.scss
+++ b/src/scss/_demo.main.scss
@@ -76,6 +76,7 @@ body,
 .c-site {
     max-width: 1200px;
     margin: 0 auto;
+    overflow: hidden; // Grid overflow fix
 }
 
 ////////////////////////////////////////////////////////////////////////////////
